--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <div class="container">
         <h1>中小企业重整价值评估系统</h1>
         <div class="explain">说明：
-            本工具为初筛参考，实际重整仍需专业机构评估。为了对您的重整价值进行评估，需要分别测算企业模拟清算清偿率、重整价值合理性以及重整可行性。</div>
+            本工具为初筛参考，实际重整仍需专业机构评估。为了对您的重整价值进行评估，需要分别测算企业清算后可分配资金、重整价值合理性以及重整可行性。</div>
         <div class="hint">提示：<br>
-            ①在计算，破产重整价值模块，每一部分赋值权重均为可调整项，您可以根据实际情况进行权重调整。<br>
+            ①在计算破产重整价值模块，每一部分赋值权重均为可调整项，您可以根据实际情况进行权重调整。<br>
             ②在计算资产价值时，可将市场上相同或类似的资产的快速交易价格作为基础评估价格。</div>
         <div class="standard">本评估系统相关判断依据：
             《全国法院破产审判工作会议纪要》（法〔2018〕53号）第14条（重整企业的识别审查）规定：“破产重整的对象应当是具有挽救价值和可能的困境企业；对于僵尸企业，应通过破产清算，果断实现市场出清。人民法院在审查重整申请时，根据债务人的资产状况、技术工艺、生产销售、行业前景等因素，能够认定债务人明显不具备重整价值以及拯救可能性的，应裁定不予受理。”</div>
