--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
         <!-- Part3 综合评估 -->
         <section class="part">
             <h2>Part3: 综合评估重整合理性</h2>
-            <div class="explain1">基于前序计算结果验证重整清偿率是否优于清算，自动生成最终评估结论</div>
+            <div class="explain1">基于前序计算结果验证重整清偿率是否优于清算，自动生成最终评估结论。</div>
         
             <!-- 无需输入字段，直接展示综合计算结果 -->
             <div class="input-group tip">
