--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header class="main-header">
+        SmartReborn
+    </header>
     <div class="container">
         <h1>中小企业重整价值评估系统</h1>
         <div class="explain">说明：
@@ -208,4 +211,3 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js"></script>
 </body>
 </html>
-
